feat: Add CSP and disable context menu on product images
Introduces a Content Security Policy (CSP) to restrict resource loading, specifically allowing iframes from formsheets.vercel.app. Also, disables the context menu on product images within the ProductCard component to improve user experience.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -6,6 +7,9 @@
     <title>EcoFeira - Compare e Economize</title>
     <meta name="description" content="Compare preços em supermercados locais, encontre ofertas exclusivas e economize tempo e dinheiro com a lista de compras inteligente do EcoFeira." />
     
+    <!-- Permissão para Iframe (CSP) -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval'; frame-src 'self' https://formsheets.vercel.app/;">
+
     <!-- Favicon Profissional -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='8' fill='%2310b981'/%3E%3Cpath d='M11 12c0-2.761 2.239-5 5-5s5 2.239 5 5h-1c0-2.209-1.791-4-4-4s-4 1.791-4 4h-1zm11 2H10c-1.105 0-2 .895-2 2v8c0 1.105.895 2 2 2h12c1.105 0 2-.895 2-2v-8c0-1.105-.895-2-2-2zm-2 4l-4 4-2-2' stroke='white' stroke-width='2.5' stroke-linecap='round' stroke-linejoin='round' fill='none'/%3E%3C/svg%3E">
 
